# rust-game

./: Cargo.toml
assets/sprites/knight/: knight.ron
config/: bindings.ron
resources/sprites/knight/: knight.ron
src/: main.rs  state.rs
src/components/: animation.rs  mod.rs  player.rs
src/entities/: mod.rs  player.rs
src/resources/: asset.rs
src/states/: load.rs
src/systems/: mod.rs  player_movement.rs
src/systems/animations/: control.rs  mod.rs  player.rs
