[package]
name = "amethyst-starter-2d"
version = "0.1.0"
authors = ["Hilmar Wiegand <me@hwgnd.de>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst" }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
